[package]
name = "simple_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
byteorder = "1"
serde = "1"
serde_derive = "1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[lib]
name = "libsimpledb"
path = "src/lib.rs"